feat(RegisterActivity, manifest):add permissoes e logica de camera

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,15 @@
         <!-- Tela de Jogadores da Partida -->
         <activity android:name=".view.JogadoresPartidaActivity" />
 
-
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.fifa_ufms.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
 
 
     </application>
@@ -61,6 +69,12 @@
 
     <!-- Para Android 12 ou inferior -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!-- Para usar a camera do celular -->
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
 
 </manifest>
